# PlayerStageExamples

./: README
CarryObjects/: CMakeLists.txt  CarryObjects.kdev4  main.cpp  objects.cfg  objects.world  robot.cpp  robot.h
CarryObjects/.kdev4/: CarryObjects.kdev4
SimpleDumpData/: CMakeLists.txt  SimpleDumpData.kdev4  main.cpp
SimpleDumpData/.kdev4/: SimpleDumpData.kdev4
SimpleWander/: CMakeLists.txt  SimpleWander.kdev4  main.cpp  objects.world  robot.cpp  robot.h
SimpleWander/.kdev4/: SimpleWander.kdev4
